--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!--============ Header =============-->
         <header class="header">
             <nav class="nav container">
-                <a href="#" class="nav__logo">
+                <a href="https://m4goth.github.io/portfolio/" class="nav__logo">
                     Matheus De Almeida Silveira
                 </a>
 
