--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="home__data">
                         <h1 class="home__title">Hello World</h1>
                         <p class="home__description">
-                            Hi, my name is Matheus <br> nice to meet you.
+                            My name is Matheus <br> nice to meet you.
                         </p>
                         <a href="https://api.whatsapp.com/send?phone=5553984521233" class="home__button">
                             Contato
