--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="header">
             <nav class="nav container">
                 <a href="https://m4goth.github.io/portfolio/" class="nav__logo">
-                    Matheus De Almeida Silveira
+                    Portfólio
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
