--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <!--===== CSS =====-->
         <link rel="stylesheet" href="style.css">
         <!--======== Titulo da aba ==========-->
-        <title>Dev Front End - m4goth</title>
+        <title>Dev Front End - Matheus</title>
         <link rel="shortcut icon" href="https://github.com/m4goth/portfolio/blob/main/imagens/icons/favicon-16x16.png?raw=true" type="image/x-icon">
     </head>
     <body>
